--- a/java/src/main/webapp/css/npgeek.css
+++ b/java/src/main/webapp/css/npgeek.css
@@ -17,6 +17,7 @@ ul {
 
 li {
 	display: inline-block;
+	
 
 }
 
@@ -42,7 +43,8 @@ nav ul li {
 	border-radius: 8px;
 	list-style: none;
 	text-align: center;
-	width: 200px;
+	width: 300px;
+	height: 75px;
 
 }
 
