--- a/java/src/main/webapp/css/npgeek.css
+++ b/java/src/main/webapp/css/npgeek.css
@@ -1,22 +1,27 @@
 nav h2 {
 	text-align: center;
 	padding-left: 60px;
+	font-family: helvetica;
 }
 
 nav p {
 	text-align: center;
 	/*font-size: 12pt;*/
 	font-style: italic;
+	font-family: helvetica;
 	padding-left: 60px;
 }
 
 ul {
 	text-align: center;
+	font-family: helvetica;
+	font-size: 20px;
 	padding-left: 80px;
 }
 
 li {
 	display: inline-block;
+	
 	
 
 }
@@ -28,11 +33,13 @@ li a {
 	list-style: none;
 	text-align: center;
 	vertical-align: middle;
+	font-family: helvetica;
 }
 
 nav ul {
 	text-align: center;
 	width: 100%;
+	
 }
 
 nav ul li {
@@ -45,6 +52,7 @@ nav ul li {
 	text-align: center;
 	width: 300px;
 	height: 75px;
+		
 
 }
 
