--- a/java/src/main/webapp/css/npgeek.css
+++ b/java/src/main/webapp/css/npgeek.css
@@ -1,64 +1,95 @@
-nav h2 {
-	text-align: center;
-	padding-left: 60px;
-	font-family: helvetica;
-}
-
-nav p {
-	text-align: center;
-	/*font-size: 12pt;*/
-	font-style: italic;
-	font-family: helvetica;
-	padding-left: 60px;
-}
-
-ul {
-	text-align: center;
-	font-family: helvetica;
-	font-size: 20px;
-	padding-left: 80px;
-}
-
-li {
-	display: inline-block;
-	
-	
-
-}
-
-li a {
-	color: white;
-	text-decoration: none;
-	/*font-size: 20pt;*/
-	list-style: none;
-	text-align: center;
-	vertical-align: middle;
-	font-family: helvetica;
-}
-
-nav ul {
-	text-align: center;
+nav {
 	width: 100%;
+	height: 38px; 
+	background-color: #0b98de;
+	overflow: hidden;
+}
+
+nav a {
+	display: block;
+	float: left;
+	font-family: helvetica;
+	font-size 9px;
+	color: white;
+	padding-top: 20px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	text-decoration: none;
+	text-align: center;
+}
+
+nav:hover {
 	
 }
 
-nav ul li {
-	display: inline-block;
-	float: left;
-	margin-right: 20px;
-	background-color: green;
-	border-radius: 8px;
-	list-style: none;
-	text-align: center;
-	width: 300px;
-	height: 75px;
-		
-
+#logo {
+	
 }
 
 nav:after {
 	clear: both;
 }
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+  position: relative;
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Centered section inside the top navigation */
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+  float: right;
+}
+
+/* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav-right {
+    float: none;
+    display: block;
+  }
+
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+
+
 
 li a:hover {
 	text-decoration: underline;
@@ -82,4 +113,3 @@ ul#horizontal-list {
 ul#horizontal-list li {
 		display: inline;
 }
-
